# echobrief

echobrief-backend/: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
echobrief-backend/app/: main.py
echobrief-backend/app/api/v1/: admin.py  articles.py  auth.py  dashboard.py  podcasts.py  sources.py  subscriptions.py  system.py  topics.py  users.py
echobrief-backend/app/core/: auth.py  celery_app.py  config.py  database.py  middleware.py  rate_limiter.py  security.py
echobrief-backend/app/models/: articles.py  podcasts.py  sources.py  subscriptions.py  topics.py  users.py
echobrief-backend/app/schemas/: articles.py  auth.py  common.py  dashboard.py  podcasts.py  sources.py  subscriptions.py  topics.py  users.py  validators.py
echobrief-backend/app/services/: article_service.py  avatar_service.py  dashboard_service.py  email_service.py  news_aggregation_service.py  podcast_service.py  source_service.py  subscription_service.py  topic_service.py  tts_service.py  user_service.py
echobrief-backend/app/tasks/: email_tasks.py  news_aggregation.py  podcast_generation.py  subscription_management.py
echobrief-backend/migrations/: env.py
echobrief-backend/migrations/versions/: a33e3b54a8c6_create_topics_table.py  a87523e99078_add_avatar_filename_to_users.py  ae8485f1f4e6_create_sources_table.py  e1ecb0da4383_create_articles_table.py  e9125c28c465_add_oauth_fields_to_users.py  fb262357e4dc_create_users_and_users_topics_table.py  ga8f3a943542_create_podcasts_podcast_topics_podcast_.py  h949cd6b73ac_create_user_subscriptions_table.py
echobrief-backend/scripts/: create_admin_user.py  run_email_tasks.py  run_news_aggregation.py  run_podcast_generation.py  run_subscription_management.py  seed_topics.py
echobrief-frontend/: README.md  index.html  (+4 more)
(+33 files in other folders)
