[project]
name = "echobrief-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "elevenlabs>=2.27.0",
    "fastapi[standard]>=0.127.0",
    "feedparser>=6.0.12",
    "openai>=2.14.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
    "redis>=7.1.0",
    "sqlmodel>=0.0.29",
]
